<resources>
    <string name="app_name">SADE</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">E-mail é inválido</string>
    <string name="error_invalid_password">Senha é inválida</string>
    <string name="error_incorrect_password">A senha está errada</string>
    <string name="error_field_required">Insira um valor</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="erro_login_invalido">Login inválido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sair">Sair</string>
    <string name="home">Home</string>
    <string name="pacientes">Pacientes</string>
    <string name="consultas">Consultas</string>
    <string name="diagnosticos">Diagnósticos</string>
    <string name="perfil">Perfil</string>
    <string name="pagina_inicial">Página Inicial</string>
    <string name="nova">Nova</string>
    <string name="novo">Novo</string>
    <string name="nova_consulta">NOVA CONSULTA</string>

    <string name="paciente">Paciente:</string>


    <string name="editar">Editar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="visualizar">Visualizar</string>
    <string name="listar">Listar</string>
    <string name="remover">Remover</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="ok">OK</string>

    <string name="titulo_app">SISTEMA DE APOIO AO DIAGNÓSTICO ESQUIZOFRÊNICO</string>


    <!-- Mensagens dialog -->
    <string name="deseja_sair">Deseja mesmo sair?</string>
    <string name="deseja_fechar">Deseja mesmo fechar o app?</string>
    <string name="deseja_deletar_paciente">Deseja mesmo remover %s dos seus pacientes?</string>
    <string name="iniciar_nova_consulta">Deseja mesmo iniciar uma nova consulta?</string>
    <string name="deseja_finalizar_consulta">Deseja mesmo finalizar a consulta?</string>
    <string name="erro_conexao">Problema na conexão com o servidor</string>
    <string name="sincronizando">Sincronizando, aguarde!</string>
    <string name="buscar_diagnostico">Buscar o possível diagnóstico para esse paciente?</string>

    <!-- pacientes -->
    <string name="data_entrada">Data entrada</string>
    <string name="ultimo_atendimento">Último atendimento</string>
    <string name="data_nascimento">Data de nascimento</string>

    <string name="bem_vindo">Bem vindo!</string>

    <string name="nome_paciente">Nome do paciente</string>

    <string name="descricao">Descrição</string>

    <!-- consulta -->
    <string name="data_consulta">Data consulta</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_termino">Hora termino</string>

    <string name="lista_atendimentos">Lista de consultas</string>
    <string name="sintomas">Lista de sintomas</string>
    <string name="sintomas_selecionados">Sintomas selecionados</string>
    <string name="finalizar_consulta">FINALIZAR CONSULTA</string>

    <string name="diagnostico">Realizar diagnóstico</string>

    <string name="possivel_diagnostico">Possível diagnóstico</string>

    <string name="buscar">Buscar...</string>

</resources>
