<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/pagina_inicial" />
        <item
            android:id="@+id/nav_pacientes"
            android:icon="@drawable/ic_menu_pacientes"
            android:title="@string/pacientes" />
    </group>

    <item android:title="@string/perfil">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_perfil"
                    android:icon="@drawable/ic_menu_person"
                    android:title="@string/editar" />
            </group>
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/sair" />
        </menu>
    </item>

</menu>
