<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardUseCompatPadding="true"
        android:id="@+id/atendimento_cardview"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/material_data_consulta">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/atendimento_data_consulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_consulta" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/material_hora_inicial"
                android:layout_below="@+id/material_data_consulta">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/atendimento_hora_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora_inicio"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/material_hora_termino"
                android:layout_below="@+id/material_hora_inicial">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/atendimento_hora_termino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora_termino"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/material_descricao"
                android:layout_below="@+id/material_hora_termino">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/atendimento_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_editar_consulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_blue"
                android:layout_below="@+id/material_descricao"
                android:layout_alignParentRight="true"
                android:background="?selectableItemBackground"
                android:padding="6dp"
                android:layout_margin="3dp"/>

            <ImageButton
                android:id="@+id/btn_visualizar_consulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_red"
                android:layout_below="@+id/material_descricao"
                android:layout_toStartOf="@+id/btn_editar_consulta"
                android:background="?selectableItemBackground"
                android:padding="6dp"
                android:layout_margin="3dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black"
                android:layout_below="@+id/material_descricao"
                android:layout_toStartOf="@+id/btn_visualizar_consulta"
                android:background="?selectableItemBackground"
                android:padding="6dp"
                android:layout_margin="3dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>